fix sidenav animation on narrow screens

--- a/src/app/components/sidenav/sidenav.component.css
+++ b/src/app/components/sidenav/sidenav.component.css
@@ -14,7 +14,7 @@
 }
 
 .open {
-  max-width: 50%;
+  max-width: 100vw;
   width: 200px;
   padding: 8px;
   padding-top: 0;
